--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="grmpl.mk.stepandheightcounter">
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <application android:allowBackup="true" android:icon="@mipmap/ic_walkingsteps"
+    <application android:allowBackup="true" android:icon="@mipmap/ic_walkingsteps_coloured"
         android:label="@string/app_name" android:supportsRtl="true" android:theme="@style/AppTheme">
         <activity android:name=".MainActivity" android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" android:launchMode="singleTop">
