[WIP] Updated app for security
- Updated buildToolsVersion
- Added foreground service permission
- Fixed wakelock tag errors
- Fixed Handler deprecation warnings
- Fixed PreferenceManager deprecation warnings
- Fixed Notification.Builder(context) deprecation warning
- Fixed CheckBoxPreference deprecation warning
- Fixed PreferenceFragment deprecation warning
- Fixed return type warnings
- Fixed type conversion warnings
- Added "-Werror" linter check to fix warnings

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ allprojects {
         jcenter()
     }
     tasks.withType(JavaCompile) {
-        options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+        options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation" << "-Werror"
     }
 }
 
