--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="grmpl.mk.stepandheightcounter">
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <application android:allowBackup="true" android:icon="@mipmap/ic_walkingsteps_coloured"
         android:label="@string/app_name" android:supportsRtl="true" android:theme="@style/AppTheme">
         <activity android:name=".MainActivity" android:label="@string/app_name"
