[WIP] Updated app for security
- Fixed deprecation in preferences.xml
- Fixed deprecated PreferenceActivity
- Fixed deprecated Environment.getExternalStorageDirectory
- Fixed duplicate keys in xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,18 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <application android:allowBackup="true" android:icon="@mipmap/ic_walkingsteps_coloured"
         android:label="@string/app_name" android:supportsRtl="true" android:theme="@style/AppTheme">
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="grmpl.mk.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths">
+            </meta-data>
+        </provider>
+
         <activity android:name=".MainActivity" android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" android:launchMode="singleTop">
             <intent-filter>
